import { render } from "@testing-library/react";
import JobCard, { JobCardSkeleton } from "@/components/JobCard";
import RatingForm from "@/components/RatingForm";
import { ToastSnapshot } from "@/components/Toast";
import FreelancerTierBadge from "@/components/FreelancerTierBadge";
import Navbar from "@/components/Navbar";
import type { Job } from "@marketpay/shared-types";

jest.mock("@/hooks/useBookmarks", () => ({
  useBookmarks: () => ({
    isSaved: (jobId: string) => jobId === "job-bookmarked",
    toggleBookmark: jest.fn(),
    savedCount: 1,
    getSavedJobs: jest.fn(),
    bookmarks: ["job-bookmarked"],
  }),
}));

jest.mock("@/contexts/PriceContext", () => ({
  usePriceContext: () => ({ xlmPriceUsd: 0.12 }),
}));

jest.mock("next/link", () => ({
  __esModule: true,
  default: ({ children, href }: { children: React.ReactNode; href: string }) => (
    <a href={href}>{children}</a>
  ),
}));

jest.mock("@/lib/api", () => ({
  fetchNotificationPreferences: jest.fn().mockResolvedValue({
    notificationTypes: ["escrow_created", "dispute_opened"],
    preferences: {
      escrow_created: { decentralized: false },
      dispute_opened: { decentralized: false },
    },
  }),
  fetchNotifications: jest.fn().mockResolvedValue({
    notifications: [],
    unreadCount: 0,
    nextCursor: null,
  }),
  markAllNotificationsRead: jest.fn().mockResolvedValue({ updatedCount: 0 }),
  markNotificationRead: jest.fn().mockResolvedValue({}),
  submitRating: jest.fn().mockResolvedValue({}),
  updateNotificationPreferences: jest.fn().mockResolvedValue({}),
}));

jest.mock("@/lib/i18n", () => ({
  useTranslation: () => ({
    t: (key: string) =>
      ({
        "nav.home": "Home",
        "nav.browseJobs": "Browse Jobs",
        "nav.dashboard": "Dashboard",
        "nav.postJob": "Post Job",
        "nav.insights": "Insights",
        "nav.developer": "Developer",
        "nav.dao": "DAO",
        "nav.connectWallet": "Connect Wallet",
        "nav.disconnect": "Disconnect",
        "nav.skipToContent": "Skip to main content",
        "language.switch": "Language",
        "language.english": "English",
        "language.spanish": "Spanish",
        "language.french": "French",
        "language.portuguese": "Portuguese",
        "wallet.balance": "Balance",
        "wallet.loading": "Loading…",
      })[key] ?? key,
    i18n: { language: "en", changeLanguage: jest.fn() },
    ready: true,
  }),
}));

jest.mock("@/components/FaucetButton", () => ({
  __esModule: true,
  default: () => null,
}));

const sampleJob: Job = {
  id: "job-1",
  title: "Build a Soroban escrow contract for marketplace payouts",
  description:
    "Need a secure escrow contract and integration tests for release and refund paths on testnet.",
  budget: "500.0000000",
  currency: "XLM",
  category: "Smart Contracts",
  skills: ["Rust", "Soroban", "Testing"],
  status: "open",
  clientAddress: "GCLIENTADDRESS1234567890EXAMPLEABCDEFGHIJKLMNOPQRSTUV",
  applicantCount: 2,
  createdAt: "2026-01-12T10:00:00.000Z",
  updatedAt: "2026-01-12T10:00:00.000Z",
};

// JobCard renders `timeAgo(job.createdAt)`, which is relative to the wall
// clock — against a fixed fixture date the rendered text drifts ("6 months
// ago" becomes "7 months ago") and silently breaks the snapshot months after
// it was recorded. Freeze the clock so the output is deterministic. Only the
// Date API is faked; timers, promises and microtasks stay real so the async
// components in this file (Navbar) behave normally.
const FIXED_NOW = new Date("2026-07-15T10:00:00.000Z");

beforeAll(() => {
  jest.useFakeTimers({
    now: FIXED_NOW,
    doNotFake: [
      "cancelAnimationFrame",
      "cancelIdleCallback",
      "clearImmediate",
      "clearInterval",
      "clearTimeout",
      "hrtime",
      "nextTick",
      "performance",
      "queueMicrotask",
      "requestAnimationFrame",
      "requestIdleCallback",
      "setImmediate",
      "setInterval",
      "setTimeout",
    ],
  });
});

afterAll(() => {
  jest.useRealTimers();
});

describe("component snapshots", () => {
  it("JobCard without bookmark", () => {
    const { container } = render(<JobCard job={sampleJob} />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it("JobCard with bookmark", () => {
    const { container } = render(<JobCard job={{ ...sampleJob, id: "job-bookmarked" }} />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it("JobCardSkeleton", () => {
    const { container } = render(<JobCardSkeleton />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it("RatingForm", () => {
    const { container } = render(
      <RatingForm
        jobId="job-1"
        ratedAddress="GFREELANCER1234567890EXAMPLEABCDEFGHIJKLMNOPQRSTU"
        ratedLabel="the freelancer"
      />
    );
    expect(container.firstChild).toMatchSnapshot();
  });

  it("Toast success", () => {
    const { container } = render(
      <ToastSnapshot variant="success" message="Escrow funded successfully" />
    );
    expect(container.firstChild).toMatchSnapshot();
  });

  it("Toast error", () => {
    const { container } = render(<ToastSnapshot variant="error" message="Transaction failed" />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it("Toast info", () => {
    const { container } = render(<ToastSnapshot variant="info" message="Application saved" />);
    expect(container.firstChild).toMatchSnapshot();
  });

  it.each(["Newcomer", "Rising Talent", "Top Rated", "Expert"] as const)(
    "FreelancerTierBadge %s",
    (tier) => {
      const { container } = render(<FreelancerTierBadge tier={tier} />);
      expect(container.firstChild).toMatchSnapshot();
    }
  );

  it("Navbar logged out", () => {
    const { container } = render(
      <Navbar publicKey={null} onConnect={jest.fn()} onDisconnect={jest.fn()} />
    );
    expect(container.firstChild).toMatchSnapshot();
  });

  it("Navbar logged in", () => {
    const { container } = render(
      <Navbar
        publicKey="GCLIENTADDRESS1234567890EXAMPLEABCDEFGHIJKLMNOPQRSTUV"
        onConnect={jest.fn()}
        onDisconnect={jest.fn()}
      />
    );
    expect(container.firstChild).toMatchSnapshot();
  });
});
